--- a/app/ch4/ts/hello-world/app.html
+++ b/app/ch4/ts/hello-world/app.html
@@ -1,1 +1,8 @@
-<h1>Hello {{target}}!</h1>
+<h1>Hello {{name}}!</h1>
+<p>
+    Here's a list of the things you need to do:
+</p>
+<ul>
+<template ngFor let-todo [ngForOf]="todos">
+</template>
+</ul>
